<resources>
    <string name="app_name">PDV_2016</string>
    <string name="action_settings">Settings</string>
    <string name="action_novo">Novo Produto</string>
    <string name="action_edit">Editar produto</string>
    <string name="title_activity_cadastro_novo">CadastroNovoActivity</string>
    <string name="title_activity_editar_produto">EditarProdutoActivity</string>
    <string name="sincronizar_produtos">Sincronizar Produtos</string>
    <string name="fechar_a_compra">Fechar a Compra</string>

    <string name="title_activity_mapa">Mapa de Produtos</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mapa_produtos">Mapa Produtos</string>
    <string name="accessToken">pk.eyJ1IjoiZWxjaW9hYnIiLCJhIjoiY2ltajQ2Z2t5MDBrY3V5a3VzY2p4anZ5ZiJ9.XaDTG9fCsHm5QEJ5GEtS1g</string>

</resources>
