<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_novo"
        android:orderInCategory="100"
        android:title="@string/action_novo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mapa"
        android:orderInCategory="100"
        android:title="@string/mapa_produtos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sincronia"
        android:orderInCategory="100"
        android:title="@string/sincronizar_produtos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fecha_compra"
        android:orderInCategory="100"
        android:title="@string/fechar_a_compra"
        app:showAsAction="never" />

</menu>
